--- a/FoodCollector/Base.lproj/Main.storyboard
+++ b/FoodCollector/Base.lproj/Main.storyboard
@@ -1733,72 +1733,113 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GSF-RB-Alm" userLabel="TopGradiantStripView">
                                 <rect key="frame" x="0.0" y="20" width="320" height="30"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rr1-E8-uit">
-                                        <rect key="frame" x="241" y="4" width="47" height="21"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rr1-E8-uit">
+                                        <rect key="frame" x="237" y="4" width="75" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="21" id="6WI-BV-HdC"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="6WI-BV-HdC"/>
+                                            </mask>
+                                        </variation>
                                     </label>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="VerticalLine" translatesAutoresizingMaskIntoConstraints="NO" id="ti3-xO-eiU">
-                                        <rect key="frame" x="229" y="8" width="1" height="17"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="VerticalLine" translatesAutoresizingMaskIntoConstraints="NO" id="ti3-xO-eiU">
+                                        <rect key="frame" x="230" y="8" width="1" height="17"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="1" id="1hm-UO-6cY"/>
-                                            <constraint firstAttribute="height" constant="17" id="e1Z-YF-igU"/>
+                                            <constraint firstAttribute="width" constant="1" id="ClX-AF-sBe"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q8Z-cN-964">
-                                        <rect key="frame" x="179" y="5" width="42" height="21"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q8Z-cN-964">
+                                        <rect key="frame" x="93" y="5" width="124" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="21" id="DTS-oc-zu5"/>
+                                            <constraint firstAttribute="width" constant="124" id="dIF-le-cga"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="DTS-oc-zu5"/>
+                                            </mask>
+                                        </variation>
                                     </label>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="VerticalLine" translatesAutoresizingMaskIntoConstraints="NO" id="Nty-7q-bOT">
-                                        <rect key="frame" x="159" y="7" width="1" height="17"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="1" id="6u6-L9-GGR"/>
-                                            <constraint firstAttribute="height" constant="17" id="AxG-ER-psi"/>
-                                        </constraints>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="VerticalLine" translatesAutoresizingMaskIntoConstraints="NO" id="Nty-7q-bOT">
+                                        <rect key="frame" x="87" y="7" width="1" height="17"/>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dua-aU-plr">
-                                        <rect key="frame" x="103" y="5" width="45" height="21"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dua-aU-plr">
+                                        <rect key="frame" x="44" y="5" width="25" height="21"/>
                                         <constraints>
+                                            <constraint firstAttribute="width" constant="25" id="CSc-am-ccl"/>
                                             <constraint firstAttribute="height" constant="21" id="haE-2L-Y7z"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="haE-2L-Y7z"/>
+                                            </mask>
+                                        </variation>
                                     </label>
-                                    <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="AudienceIconPublic" translatesAutoresizingMaskIntoConstraints="NO" id="t5i-Fq-l3h">
-                                        <rect key="frame" x="68" y="9" width="15" height="12"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AudienceIconPublic" translatesAutoresizingMaskIntoConstraints="NO" id="t5i-Fq-l3h">
+                                        <rect key="frame" x="18" y="9" width="15" height="12"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="15" id="FS9-eB-ZRy"/>
-                                            <constraint firstAttribute="height" constant="12" id="l7Z-FO-hqi"/>
+                                            <constraint firstAttribute="width" constant="15" id="U6R-38-YBg"/>
                                         </constraints>
                                     </imageView>
-                                    <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Hz4-LL-Xqm">
-                                        <rect key="frame" x="13" y="8" width="45" height="18"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hz4-LL-Xqm">
+                                        <rect key="frame" x="10" y="8" width="12" height="18"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="15" id="PWU-xJ-u9t"/>
                                         </constraints>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="PWU-xJ-u9t"/>
+                                            </mask>
+                                        </variation>
                                     </view>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
+                                    <constraint firstItem="ti3-xO-eiU" firstAttribute="leading" secondItem="q8Z-cN-964" secondAttribute="trailing" constant="13" id="54c-3R-coW"/>
+                                    <constraint firstItem="Nty-7q-bOT" firstAttribute="centerY" secondItem="dua-aU-plr" secondAttribute="centerY" id="AWi-T6-84K"/>
+                                    <constraint firstItem="ti3-xO-eiU" firstAttribute="bottom" secondItem="Rr1-E8-uit" secondAttribute="bottom" id="DF7-FW-egS"/>
+                                    <constraint firstItem="t5i-Fq-l3h" firstAttribute="leading" secondItem="Hz4-LL-Xqm" secondAttribute="trailing" constant="-4" id="EJh-eu-qp8"/>
+                                    <constraint firstItem="Rr1-E8-uit" firstAttribute="leading" secondItem="ti3-xO-eiU" secondAttribute="trailing" constant="6" id="Ffa-ne-bfE"/>
                                     <constraint firstItem="Rr1-E8-uit" firstAttribute="centerY" secondItem="GSF-RB-Alm" secondAttribute="centerY" id="Ijj-Hg-Qc9"/>
                                     <constraint firstAttribute="trailingMargin" secondItem="Rr1-E8-uit" secondAttribute="trailing" constant="56" id="LGD-tQ-m2T"/>
                                     <constraint firstItem="Hz4-LL-Xqm" firstAttribute="leading" secondItem="GSF-RB-Alm" secondAttribute="leading" constant="40" id="M8c-0F-uP7"/>
+                                    <constraint firstItem="Nty-7q-bOT" firstAttribute="leading" secondItem="dua-aU-plr" secondAttribute="trailing" constant="18" id="Nsg-C6-xNX"/>
+                                    <constraint firstItem="ti3-xO-eiU" firstAttribute="centerY" secondItem="Hz4-LL-Xqm" secondAttribute="centerY" id="OcQ-ik-aWI"/>
+                                    <constraint firstItem="t5i-Fq-l3h" firstAttribute="centerY" secondItem="dua-aU-plr" secondAttribute="centerY" id="TX0-zx-5Iw"/>
+                                    <constraint firstItem="Hz4-LL-Xqm" firstAttribute="leading" secondItem="GSF-RB-Alm" secondAttribute="leading" constant="10" id="ZDn-ob-mDv"/>
+                                    <constraint firstItem="dua-aU-plr" firstAttribute="bottom" secondItem="Hz4-LL-Xqm" secondAttribute="bottom" id="aoh-xm-odr"/>
+                                    <constraint firstItem="ti3-xO-eiU" firstAttribute="top" secondItem="Hz4-LL-Xqm" secondAttribute="top" id="dul-yu-oLt"/>
+                                    <constraint firstItem="q8Z-cN-964" firstAttribute="leading" secondItem="Nty-7q-bOT" secondAttribute="trailing" constant="5" id="eEs-X4-lUt"/>
+                                    <constraint firstItem="Nty-7q-bOT" firstAttribute="centerY" secondItem="GSF-RB-Alm" secondAttribute="centerY" id="jdc-rd-6dT"/>
                                     <constraint firstAttribute="height" constant="30" id="mKo-u4-uiw"/>
-                                    <constraint firstItem="t5i-Fq-l3h" firstAttribute="centerY" secondItem="GSF-RB-Alm" secondAttribute="centerY" id="moO-yN-xXU"/>
-                                    <constraint firstItem="ti3-xO-eiU" firstAttribute="centerY" secondItem="GSF-RB-Alm" secondAttribute="centerY" id="ytQ-ZP-0GH"/>
+                                    <constraint firstItem="t5i-Fq-l3h" firstAttribute="centerY" secondItem="Rr1-E8-uit" secondAttribute="centerY" id="skZ-63-pC6"/>
+                                    <constraint firstItem="dua-aU-plr" firstAttribute="firstBaseline" secondItem="q8Z-cN-964" secondAttribute="firstBaseline" id="uB7-2z-J6P"/>
+                                    <constraint firstItem="dua-aU-plr" firstAttribute="leading" secondItem="t5i-Fq-l3h" secondAttribute="trailing" constant="11" id="ugG-G4-ZSj"/>
+                                    <constraint firstItem="Nty-7q-bOT" firstAttribute="centerX" secondItem="GSF-RB-Alm" secondAttribute="centerX" constant="-72.5" id="vtO-mH-t1f"/>
+                                    <constraint firstItem="q8Z-cN-964" firstAttribute="baseline" secondItem="dua-aU-plr" secondAttribute="baseline" id="wZv-2O-RfH"/>
+                                    <constraint firstItem="Hz4-LL-Xqm" firstAttribute="top" secondItem="GSF-RB-Alm" secondAttribute="topMargin" id="xY1-6t-ehm"/>
+                                    <constraint firstAttribute="trailing" secondItem="Rr1-E8-uit" secondAttribute="trailing" constant="8" id="yCH-Uw-yLT"/>
                                 </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="M8c-0F-uP7"/>
+                                        <exclude reference="Ijj-Hg-Qc9"/>
+                                        <exclude reference="LGD-tQ-m2T"/>
+                                    </mask>
+                                </variation>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2pA-4N-af7">
                                 <rect key="frame" x="20" y="400" width="60" height="60"/>
